[gd_scene load_steps=2 format=3 uid="uid://ganajofxqur2"]

[ext_resource type="Script" path="res://scripts/node_2d.gd" id="1_0x14v"]

[node name="mainScreen" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_0x14v")

[node name="NewButton" type="Button" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 176.0
offset_right = 64.0
offset_bottom = 208.0
text = "New"

[node name="ContinueButton" type="Button" parent="."]
layout_mode = 0
offset_left = 72.0
offset_top = 176.0
offset_right = 152.0
offset_bottom = 208.0
text = "Continue"

[node name="OptionsButton" type="Button" parent="."]
layout_mode = 0
offset_left = 160.0
offset_top = 176.0
offset_right = 230.0
offset_bottom = 208.0
action_mode = 0
text = "Options"

[node name="QuitButton" type="Button" parent="."]
layout_mode = 0
offset_left = 240.0
offset_top = 176.0
offset_right = 312.0
offset_bottom = 208.0
text = "Quit"

[node name="title" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 80.0
offset_top = 16.0
offset_right = 240.0
offset_bottom = 128.0
bbcode_enabled = true
text = "[font_size={40
}][b][i]Seek to 
Survive[/i][/b]"
